# clothes

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  skills-lock.json  test_gemini_tryon.py
.github/workflows/: ci.yml  deploy.yml
backend/: models_clothes.py  pyproject.toml  routers
backend/app/: auth.py  config.py  db.py  inference.py  main.py  models.py  storage.py  validation.py
backend/app/api/: auth.py  garments.py  tryon.py  upload.py
backend/scripts/: backup_db.py  cleanup_images.py  clear_s3.py
backend/tests/: conftest.py  test_api_auth.py  test_api_garments.py  test_api_tryon.py  test_api_upload.py  test_auth_utils.py  test_cors.py
docs/: AUTH_ARCHITECTURE.md  SA.md  architecture.drawio  architecture.html  architecture.md
frontend/: Dockerfile  UI_STRUCTURE.md  next.config.mjs  package-lock.json  package.json  wardorbe
frontend/src/: auth.ts
frontend/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/size-guide/: page.tsx
frontend/src/app/studio/: page.tsx
frontend/src/components/: BrandsSidebar.tsx  ClothesPanel.tsx  FilterTabs.tsx  MobileTabBar.tsx  Navbar.tsx  OutfitRecords.tsx  SizeFinder.tsx  SizeGuideClient.tsx  TryonCenter.tsx  TryonModal.tsx
frontend/src/lib/: api.ts  auth.ts
