[project]
name = "vtr-backend"
version = "0.1.0"
description = "Virtual Try-On backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "boto3>=1.35",
    "replicate>=1.0",
    "python-multipart>=0.0.18",
    "pillow>=11.0",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "pyjwt>=2.12.1",
    "passlib[bcrypt]>=1.7.4",
    "resend>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
