[project]
name = "vtr-backend"
version = "0.1.0"
description = "Virtual Try-On backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "boto3>=1.35",
    "python-multipart>=0.0.18",
    "pillow>=11.0",
    "pydantic-settings>=2.7",
    "email-validator>=2.0",
    "httpx>=0.28",
    "pyjwt>=2.12.1",
    "bcrypt>=4.0",
    "resend>=2.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
